fix: 샘플 블로그 글 예제 추가(#2)

--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -6,6 +6,30 @@ summary: 'This is my first blog post.'
 image: '/images/hello-world/hello-world.jpeg'
 ---
 
+# 블로그 새로 만들다
+
 Hello, World!
+새로운 글 작성 테스트 입니다.
+
+## 부제목도 테스트 해봅시다
+
+부제목 관련 내용이 들어갈겁니다.
+
+```java
+public void String main() {
+    System.out.println("테스트 문자열 출력");
+}
+```
+
+> 설명을 작성할 때는 이렇게 할 수도 있습니다.
+
+목록을 작성해봅시다.
+
+- 목록1
+- 목록2
+- 목록3
+
+
+
 
 사진: <a href="https://unsplash.com/ko/%EC%82%AC%EC%A7%84/DHl49oyrn7Y?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>의<a href="https://unsplash.com/@alexbemore?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alexander Shatov</a>
