Component: Aside 컴포넌트를 추가하여 MDX에서 사용할 수 있도록 적용(#9)

--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -29,7 +29,6 @@ public void String main() {
 - 목록2
 - 목록3
 
-
-
+<Aside>테스트 중이야</Aside>
 
 사진: <a href="https://unsplash.com/ko/%EC%82%AC%EC%A7%84/DHl49oyrn7Y?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>의<a href="https://unsplash.com/@alexbemore?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alexander Shatov</a>
