--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -21,6 +21,11 @@ public void String main() {
 }
 ```
 
+부제목 관련 내용이 들어갈겁니다.
+부제목 관련 내용이 들어갈겁니다.
+부제목 관련 내용이 들어갈겁니다.
+부제목 관련 내용이 들어갈겁니다.
+
 > 설명을 작성할 때는 이렇게 할 수도 있습니다.
 
 목록을 작성해봅시다.
@@ -29,6 +34,14 @@ public void String main() {
 - 목록2
 - 목록3
 
+리스트를 작성해봅시다.
+
+1. 당근
+2. 사과
+3. 바나나
+
 <Aside>테스트 중이야</Aside>
+
+## Is English is necessary?
 
 사진: <a href="https://unsplash.com/ko/%EC%82%AC%EC%A7%84/DHl49oyrn7Y?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>의<a href="https://unsplash.com/@alexbemore?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alexander Shatov</a>
