UI: hero 이미지 설명 추가(#18)

--- a/content/apple-news-sample.mdx
+++ b/content/apple-news-sample.mdx
@@ -4,6 +4,7 @@ publishedAt: '2023-04-11'
 category: '업데이트'
 summary: '기후 자산운용이 관리하는 새로운 기금은 효과적이고, 확장 잠재력이 높으며, 자연을 기반으로 한 탄소 상쇄를 위한 추가적인 선택지를 선보인다'
 image: '/images/sample/Apple-Restore-Fund-hero.jpg'
+imageDescription: 'Apple은 추가 기금과 최대 2억 달러에 달하는 Apple의 신규 투자와 함께, 자연 기반 탄소 제거를 위한 혁신적인 복원 기금을 확정할 예정이다.'
 ---
 
 # 블로그 새로 만들다
