Component: 관련 글 목록 표기하는 컴포넌트 추가(#15)
- 샘플 포스팅 글 수정
- contentlayer.config.js 글 목록 다큐먼트 필드 추가
- 리스트 UI 컴포넌트 추가

--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Hello, World!'
+title: 'Hello, World! 조금 더 긴 제목이면 어떨까? 과연 길이가 길어지면 어떻게 될까 궁금하다'
 publishedAt: '2023-04-15'
 category: 'blog'
 summary: 'This is my first blog post.'
