Fix: typo and link

--- a/content/prettier.mdx
+++ b/content/prettier.mdx
@@ -2,7 +2,7 @@
 title: 'Webstorm에서 prettier 사용하기'
 publishedAt: '2023-05-01'
 category: '블로그'
-summary: 'Webstorm에서 prettier 설정으로 코드를 보기좋게 만들어보자.'
+summary: 'Webstorm에서 prettier 설정으로 코드를 보기좋게 만들어보자'
 image: '/images/prettier/prettier.jpg'
 imageDescription: 'prettier를 사용하면 코드를 보기 좋게 정리할 수 있다'
 ---
@@ -56,7 +56,7 @@ npm install --global prettier
 
 ## 정리하며..
 
-[Webstorm에서 Prettier를 설정하는 방법](https://prettier.io/)을 알아보았는데, 이 기능은 단순히 보기 좋게 코드를 정리하는 것 뿐만 아니라 여러 사람들이 협업을 할때에도 정해진 규칙과 포맷에 맞춰 작업을 할 수 있다는 장정이 있다.
+[Webstorm에서 Prettier를 설정하는 방법](https://www.jetbrains.com/help/webstorm/prettier.html)을 알아보았는데, 이 기능은 단순히 보기 좋게 코드를 정리하는 것 뿐만 아니라 여러 사람들이 협업을 할때에도 정해진 규칙과 포맷에 맞춰 작업을 할 수 있다는 장정이 있다.
 누가 작성하던지 같은 형식의 코드를 보니 이해하기 쉽고 리뷰도 편하게 할 수 있다.
 
 
