글 이미지 설명 추가

--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,9 +1,10 @@
 ---
-title: 'Hello, World! 조금 더 긴 제목이면 어떨까? 과연 길이가 길어지면 어떻게 될까 궁금하다'
-publishedAt: '2023-04-15'
-category: 'blog'
-summary: 'This is my first blog post.'
-image: '/images/hello-world/hello-world.jpeg'
+title: "Hello, World! 조금 더 긴 제목이면 어떨까? 과연 길이가 길어지면 어떻게 될까 궁금하다"
+publishedAt: "2023-04-15"
+category: "blog"
+summary: "This is my first blog post."
+image: "/images/hello-world/hello-world.jpeg"
+imageDescription: "테스트 용 블로그 글"
 ---
 
 # 블로그 새로 만들다
