chore: prettier 자동 수정

--- a/content/spring-http-interface.mdx
+++ b/content/spring-http-interface.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Spring으로 HTTP 클라이언트 만들기'
-publishedAt: '2023-07-01'
-category: '블로그'
-summary: 'Spring HTTP 인터페이스를 사용해서 HTTP 클라이언트를 간단히 만들어보자'
-image: '/images/http-interface/server_to_server.jpeg'
-imageDescription: 'HTTP 통신을 통해 서버와 서버 간에 데이터를 주고 받을 수 있다.'
+title: "Spring으로 HTTP 클라이언트 만들기"
+publishedAt: "2023-07-01"
+category: "블로그"
+summary: "Spring HTTP 인터페이스를 사용해서 HTTP 클라이언트를 간단히 만들어보자"
+image: "/images/http-interface/server_to_server.jpeg"
+imageDescription: "HTTP 통신을 통해 서버와 서버 간에 데이터를 주고 받을 수 있다."
 ---
 
 고객에게 정보를 제공해주는 서비스를 운영한다고 생각해보자. 고객에게 제공할 정보를 우리 서비스가 모두 가지고 있다면 DB를 조회해서 결과를 보여주면된다. 하지만 고객에게 제공할 정보중 일부는 외부에서 가져와야한다면 외부 서버와 통신을 해야 한다. 웹 환경에서 통신은 대부분 HTTP API 방식을 사용한다. 이 때 우리 서비스는 외부 서비스를 호출하는 클라이언트이기 때문에 서비스 내부에 HTTP 클라이언트를 구성해야 한다. 스프링에서 HTTP 클라이언트를 구성하는 방법을 여러가지가 있지만 그 중에 최근에 나온 HTTP Interface를 활용하여 클라이언트를 만들어보자.
@@ -293,7 +293,5 @@ Connection: keep-alive
 외부 서비스 연동을 위해 **HTTP API(REST endpoints)** 를 호출하기위해서 스프링 프레임워크에서는 3가지 방법이 있는데 그 중 **HTTP Interface**를 사용하여 서비스를 구성해보았다.
 
 요즘은 고객에게 어떤 서비스를 제공하더라도 자체적으로 모든 것을 제공하는 경우는 거의 없고 대부분 외부 서비스를 연동하여 제공하는 경우가 일반적이다. 금융에서도 대출, 렌탈, 보험 등 다양한 서비스를 여러 금융사와 연계하여 한 곳에서 서비스를 제공하는 형태가 일반화 되었다. 추후에는 이번에 작성한 **HTTP Interface**를 활용하여 외부 대출 서비스로 부터 고객의 대출 가능여부를 조회하는 서비스를 만들어보자. 👋🏻
-
-
 
 > 스프링 프레임워크에서 HTTP API를 호출하는 [3가지 방법](https://docs.spring.io/spring-framework/reference/integration/rest-clients.html): WebClient, RestRemplate, HTTP Interface
