feat: add HeroImage component and update blog posts with new images and captions
Fixes #14

--- a/app/blog/(post)/apple-news-sample/page.mdx
+++ b/app/blog/(post)/apple-news-sample/page.mdx
@@ -1,4 +1,6 @@
 import PostHeader from "@/app/components/postHeader";
+import HeroImage from "@/app/components/HeroImage";
+import appleRestoreFund from "./Apple-Restore-Fund-hero.jpg";
 
 export const metadata = {
   title: "Apple, 이산화탄소 제거를 위한 혁신적인 복원 기금 확대",
@@ -17,6 +19,11 @@ export const metadata = {
 };
 
 <PostHeader metadata={metadata} slug="apple-news-sample" />
+<HeroImage
+  src={appleRestoreFund}
+  alt="appleRestoreFund"
+  caption="Apple은 추가 기금과 최대 2억 달러에 달하는 Apple의 신규 투자와 함께, 자연 기반 탄소 제거를 위한 혁신적인 복원 기금을 확정할 예정이다."
+/>
 
 # 블로그 새로 만들다
 
