--- a/app/blog/(post)/prettier/page.mdx
+++ b/app/blog/(post)/prettier/page.mdx
@@ -1,4 +1,6 @@
-import CustomImage from "@/app/components/CustomImage";
+import AppleImage from "@/app/components/AppleImage";
+import HeroImage from "@/app/components/HeroImage";
+import prettier from "./prettier.jpg";
 import node from "./node.png";
 import configure from "./configure.png";
 import plugin from "./plugin.png";
@@ -14,6 +16,11 @@ export const metadata = {
 };
 
 <PostHeader metadata={metadata} slug="prettier" />
+<HeroImage
+  src={prettier}
+  alt="prettier"
+  caption="Webstorm에서 prettier 설정으로 코드를 보기좋게 만들어보자"
+/>
 
 코드를 작성하다보면 어디에서는 줄을 나누고 어디에서는 띄어쓰기를 하고 어디에서는 길게 늘여쓴다. 개인의 스타일에 따라 그 유형도 천차만별이다.
 그 결과물이 누구에게는 읽기 좋을 수도 있고 그렇지 않을 수도 있다. 코드 작성 규칙을 정해서 모두가 지키도록 할 수도 있지만 [prettier](https://prettier.io/)를 사용해서 자동으로 정리하도록 할 수도 있다.
@@ -35,11 +42,21 @@ v19.1.0
 
 2. 내 프로젝트에 노드 환경이 설정되어 있어야 한다.
 
-<CustomImage src={node} alt="node" />
+<AppleImage
+  src={node}
+  alt="node.js setting"
+  caption="Webstorm에서 Node.js 환경 설정하기"
+  inline={true}
+/>
 
 3. **설정 | 플러그인** **Javascript와 Typescript** 그리고 **Prettier**가 사용하도록 설정되어 있어야 한다.
 
-<CustomImage src={plugin} alt="plugin" />
+<AppleImage
+  src={plugin}
+  alt="plugin setting"
+  caption="Webstorm에서 Prettier 플러그인 설정하기"
+  inline={true}
+/>
 
 ## Webstorm에서 Prettier 설치 및 설정
 
@@ -55,7 +72,12 @@ npm install --global prettier
 
 2. **설정**에서 **언어 및 프레임워크 | Javascript | Prettier** 로 이동 후 설치 패키지가 지정된 것을 확인하고 **저장 시**를 체크한다.
 
-<CustomImage src={configure} alt="configure" />
+<AppleImage
+  src={configure}
+  alt="configure prettier in webstorm"
+  caption="파일을 저장할 때마다 Prettier로 코드를 정리하도록 설정하기"
+  inline={true}
+/>
 
 ## Prettier로 코드 정리하기
 
